Clean up and less duplicated logic in Communicator